--- a/customers_.grid.dox
+++ b/customers_.grid.dox
@@ -11,4 +11,8 @@ DoxBodyType: CSV
 #####       begin of DoxBody - (DataFork)
  
 ---
-{{ 'D4BB7F1C-83E3-4DDD-A3C8-79BE53C35483' | show_as_named_link | upcase}}
+{{ 'D4BB7F1C-83E3-4DDD-A3C8-79BE53C35483' | show_as_named_link | upcase}} dsadsadasdsa
+dsadsa
+dsa
+{{ '59248083-9E78-4EC6-8CC2-9C5226CC557D' | show_as_named_link }}
+{{ 'Ace' | menu}}
